--- a/services/backend/requirements.txt
+++ b/services/backend/requirements.txt
@@ -1,4 +1,7 @@
-Django==4.0.3
+Django==3.2.12
+djangorestframework==3.13.1
+djoser==2.1.0
+drf-yasg==1.20.0
 flake8==4.0.1
 isort==5.10.1
 numpy==1.22.3
