--- a/services/backend/requirements.txt
+++ b/services/backend/requirements.txt
@@ -1,9 +1,13 @@
-Django==3.2.12
+celery==5.2.3
+Django==4.0.3
 djangorestframework==3.13.1
+django-celery-results==2.3.0
 djoser==2.1.0
 drf-yasg==1.20.0
 flake8==4.0.1
+flower==1.0.0
 isort==5.10.1
-numpy==1.22.3
+numpy==1.19.2
 psycopg2-binary==2.9.2
 python-decouple==3.6
+redis==4.1.4
