refactor (backend): some refactoring

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
 SECRET_KEY=key
 DEBUG=True
 
-DB_ENGINE=engine
-DB_NAME=name
+DB_ENGINE=django.db.backends.postgresql
+DB_NAME=projname
 DB_USER=user
 DB_PASSWORD=pass
-DB_HOST=host
-DB_PORT=5555
+DB_HOST=localhost
+DB_PORT=5432
 
 DJANGO_SETTINGS_MODULE=projname.settings
+
+CELERY_BROKER_URL=redis://redis:6379
+CELERY_RESULT_BACKEND=django-db
