feat: add base app with basic functionality

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@ DJANGO_SETTINGS_MODULE=projname.settings
 
 CELERY_BROKER_URL=redis://redis:6379
 CELERY_RESULT_BACKEND=django-db
+CELERY_TASK_SERIALIZER=json
+CELERY_RESULT_SERIALIZER=json
