feat (backend): add basic channels configuration

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ DB_PORT=5432
 
 DJANGO_SETTINGS_MODULE=projname.settings
 
+REDIS_HOST=redis
+REDIS_PORT=6379
+
 CELERY_BROKER_URL=redis://redis:6379
 CELERY_RESULT_BACKEND=django-db
 CELERY_TASK_SERIALIZER=json
