--- a/services/backend/requirements.txt
+++ b/services/backend/requirements.txt
@@ -1,4 +1,7 @@
 celery==5.2.3
+channels==3.0.4
+channels-redis==3.4.0
+daphne==3.0.2
 Django==4.0.3
 djangorestframework==3.13.1
 django-celery-results==2.3.0
@@ -6,6 +9,7 @@ djoser==2.1.0
 drf-yasg==1.20.0
 flake8==4.0.1
 flower==1.0.0
+gunicorn==20.1.0
 isort==5.10.1
 numpy==1.22.3
 psycopg2-binary==2.9.2
