--- a/services/backend/requirements.txt
+++ b/services/backend/requirements.txt
@@ -12,6 +12,8 @@ flower==1.0.0
 gunicorn==20.1.0
 isort==5.10.1
 numpy==1.22.3
+opencv-python-headless==4.5.5.64
+Pillow==9.0.1
 psycopg2-binary==2.9.2
 python-decouple==3.6
 redis==4.1.4
