--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -19,9 +19,11 @@
         "@angular/platform-browser": "~11.2.1",
         "@angular/platform-browser-dynamic": "~11.2.1",
         "@angular/router": "~11.2.1",
+        "angular-plotly.js": "^4.0.4",
         "jspdf": "^2.5.1",
         "materialize-css": "^1.0.0-rc.2",
         "moment": "^2.29.1",
+        "plotly.js-dist-min": "^2.11.1",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
         "zone.js": "~0.11.3"
@@ -32,6 +34,7 @@
         "@angular/compiler-cli": "~11.2.1",
         "@types/jasmine": "~3.6.0",
         "@types/node": "^12.11.1",
+        "@types/plotly.js-dist-min": "^2.3.0",
         "codelyzer": "^6.0.0",
         "jasmine-core": "~3.6.0",
         "jasmine-spec-reporter": "~5.0.0",
