--- a/services/backend/requirements.txt
+++ b/services/backend/requirements.txt
@@ -2,8 +2,9 @@ celery==5.2.3
 channels==3.0.4
 channels-redis==3.4.0
 daphne==3.0.2
-Django==4.0.3
+Django==3.2.12
 djangorestframework==3.13.1
+django-celery-beat==2.2.1
 django-celery-results==2.3.0
 djoser==2.1.0
 drf-yasg==1.20.0
