feat (frontend): add real-time range selecting through slider in simple correlation

--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -23,6 +23,8 @@
         "jspdf": "^2.5.1",
         "materialize-css": "^1.0.0-rc.2",
         "moment": "^2.29.1",
+        "ng2-nouislider": "^1.8.3",
+        "nouislider": "^15.5.1",
         "plotly.js-dist-min": "^2.11.1",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
